--- a/bat/abs.html
+++ b/bat/abs.html
@@ -251,7 +251,7 @@
     <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
         <div class="container">
             <div class="list-group">
-                <p>Fetching Bus Stops List...</p>
+                <p>Fetching Bus Stops List for the first time...</p>
             </div>
             <div class="pagination-buttons" style="text-align: center; margin-top: 20px;">
                 <button id="prev-button" class="btn btn-secondary" disabled>Previous</button>
