--- a/bat/bat.html
+++ b/bat/bat.html
@@ -200,7 +200,7 @@
                                     <i class="fa-solid fa-search"
                                         style="position: absolute; left: 12px; top: 50%; transform: translateY(-50%); color: #cccccc; z-index: 1;"></i>
                                     <input type="text" id="bus-stop-search" class="form-control"
-                                        placeholder=" Search for a Bus Stop" style="padding-left: 35px; width: 100%;">
+                                        placeholder=" Search Bus Stop Code" style="padding-left: 35px; width: 100%;">
                                 </div>
 
                             </div>
